# Serverless-Rag

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: deploy.yml
app/: chunk.py  cloud.py  config.py  generate.py  ingest.py  query.py  retrieve.py  types.py
app/providers/: embeddings.py  llm.py  vectorstore.py
docs/: PROJECT.md  aws-concepts-review.md  goal.md  rag_doc.md
docs/superpowers/plans/: 2026-06-19-phase0-local-rag.md  2026-06-19-phase1a-cloud-app-layer.md  2026-06-19-phase1b-infra-and-delivery.md  2026-06-20-container-ingest-lambda.md
docs/superpowers/specs/: 2026-06-19-phase0-local-rag-design.md  2026-06-19-phase1-serverless-mvp-design.md
eval/: golden.yaml  run_eval.py
handlers/: ingest_handler.py  query_handler.py
infra/: apigw.tf  ecr.tf  iam.tf  ingest.Dockerfile  lambda.tf  oidc.tf  outputs.tf  secrets.tf  storage.tf  variables.tf  versions.tf
scripts/: build_ingest_image.sh  build_lambda.sh
tests/: test_chunk.py  test_cli.py  test_cloud.py  test_cloud_vectorstore.py  test_config.py  test_embeddings.py  test_gemini_embeddings.py  test_generate.py  test_ingest.py  test_ingest_handler.py  test_llm.py  test_query.py  test_query_handler.py  test_retrieve.py  test_run_eval.py  test_types.py  test_vectorstore.py
