[project]
name = "serverless-rag"
version = "0.0.0"
description = "Phase 0 local RAG proof: chat with a codebase."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "groq>=0.11",
    "google-genai>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto>=5.0"]

[project.scripts]
rag = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]
packages = ["app", "app.providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
